2007-03-04  Bruno Haible  <bruno@clisp.org>

	* lib/propername.c (proper_name, proper_name_utf8): Use mbsstr instead
	of strstr.
	* modules/propername (Depends-on): Remove strstr. Add mbsstr.

2007-03-04  Bruno Haible  <bruno@clisp.org>

	Moved --enable-relocatable infrastructure to gnulib.
	* modules/gettext-tools-libgettextpo-misc: Remove file.
	* modules/progreloc: Remove file.
	* modules/relocatable: Remove file.
	* modules/relocwrapper: Remove file.
	* lib/strerror.c.diff: Remove file.
	* Makefile.am (EXTRA_DIST): Remove these files.

2007-02-28  Bruno Haible  <bruno@clisp.org>

	Move relocatability infrastructure to gnulib.
	* lib/relocatable.c: Remove file.
	* lib/relocatable.h: Remove file.
	* lib/relocwrapper.c: Remove file.
	* m4/relocatable.m4: Remove file.
	* Makefile.am (EXTRA_DIST): Remove these files.

2007-02-28  Bruno Haible  <bruno@clisp.org>

	Move module xreadlink to gnulib.
	* modules/xreadlink: Remove file.
	* lib/xreadlink.h: Remove file.
	* lib/xreadlink.c: Remove file.
	* m4/xreadlink.m4: Remove file.
	* Makefile.am (EXTRA_DIST): Remove these files.

2007-02-19  Bruno Haible  <bruno@clisp.org>

	* lib/closeout.c: Include <stdlib.h> instead of exit.h.
	* lib/fd-ostream.oo.c: Don't include exit.h.
	* lib/html-styled-ostream.oo.c: Include <stdlib.h> instead of exit.h.
	* lib/iconv-ostream.oo.c: Don't include exit.h.
	* lib/memory-ostream.oo.c: Likewise.
	* lib/term-ostream.oo.c: Likewise.
	* lib/xmalloc.c: Likewise.

2007-02-12  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools-misc (Files): Add m4/locale-fr.m4.

2007-02-01  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools-misc (Makefile.am): Add @LIB_ACL@ to
	lib_LDFLAGS.
	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.

2007-01-28  Bruno Haible  <bruno@clisp.org>

	* lib/linebreak.c.diff: Update.

2007-01-27  Bruno Haible  <bruno@clisp.org>

	Move a patch to gnulib.
	* lib/javacomp.c.diff: Remove file.
	* modules/javacomp.diff: Remove file.