@@ -1,3 +1,8 @@
+2007-03-16  Bruno Haible  <bruno@clisp.org>
+
+	* lib/html-ostream.oo.c (html_ostream_create): Update after signature
+	of gl_list_create_empty changed.
+
 2007-03-04  Bruno Haible  <bruno@clisp.org>
 
 	* lib/propername.c (proper_name, proper_name_utf8): Use mbsstr instead
